create Company controller
