# src/controllers/Company/index.ts
@@ -1,0 +1,72 @@
+import CompanyService from './service';
+import { HttpError } from '../../config/error';
+import { ICompanyModel } from './model';
+import { NextFunction, Request, Response } from 'express';
+
+/**
+ * @export
+ * @param {Request} req
+ * @param {Response} res
+ * @param {NextFunction} next
+ * @returns {Promise < void >}
+ */
+export async function findAll(req: Request, res: Response, next: NextFunction): Promise < void > {
+    try {
+        const companies: ICompanyModel[] = await CompanyService.findAll();
+
+        res.status(200).json(companies);
+    } catch (error) {
+        next(new HttpError(error.message.status, error.message));
+    }
+}
+
+/**
+ * @export
+ * @param {Request} req
+ * @param {Response} res
+ * @param {NextFunction} next
+ * @returns {Promise < void >}
+ */
+export async function findOne(req: Request, res: Response, next: NextFunction): Promise < void > {
+    try {
+        const company: ICompanyModel = await CompanyService.findOne(req.params.id);
+
+        res.status(200).json(company);
+    } catch (error) {
+        next(new HttpError(error.message.status, error.message));
+    }
+}
+
+/**
+ * @export
+ * @param {Request} req
+ * @param {Response} res
+ * @param {NextFunction} next
+ * @returns {Promise < void >}
+ */
+export async function create(req: Request, res: Response, next: NextFunction): Promise < void > {
+    try {
+        const company: ICompanyModel = await CompanyService.insert(req.body);
+
+        res.status(201).json(company);
+    } catch (error) {
+        next(new HttpError(error.message.status, error.message));
+    }
+}
+
+/**
+ * @export
+ * @param {Request} req
+ * @param {Response} res
+ * @param {NextFunction} next
+ * @returns {Promise < void >}
+ */
+export async function remove(req: Request, res: Response, next: NextFunction): Promise < void > {
+    try {
+        const company: ICompanyModel = await CompanyService.remove(req.params.id);
+
+        res.status(200).json(company);
+    } catch (error) {
+        next(new HttpError(error.message.status, error.message));
+    }
+}
