# src/routes/CompanyRouter.ts
@@ -1,5 +1,5 @@
 import { Router } from 'express';
-import { UserController } from '../controllers';
+import { CompanyController } from '../controllers';
 
 /**
  * @constant {express.Router}
@@ -8,23 +8,23 @@ const router: Router = Router();
 
 /**
  * GET method route
- * @example http://localhost:PORT/v1/users
+ * @example http://localhost:PORT/v1/companies
  *
  * @swagger
- * /v1/users:
+ * /v1/companies:
  *   get:
- *     description: Get all stored users in Database
- *     tags: ["users"]
+ *     description: Get all stored companies in Database
+ *     tags: ["companies"]
  *     security:
  *      - cookieAuth: []
  *     responses:
  *       200:
- *         description: An array of users
+ *         description: An array of companies
  *         content:
  *           application/json:
  *             schema:
  *               oneOf:
- *                - $ref: '#/components/schemas/Users'
+ *                - $ref: '#/components/schemas/Companies'
  *       default:
  *          description: unexpected error
  *          content:
@@ -32,37 +32,38 @@ const router: Router = Router();
  *              schema:
  *                $ref: '#/components/schemas/Error'
  */
-router.get('/', UserController.findAll);
+router.get('/', CompanyController.findAll);
 
 /**
  * POST method route
- * @example http://localhost:PORT/v1/users
+ * @example http://localhost:PORT/v1/companies
  *
  * @swagger
- * /v1/users:
+ * /v1/companies:
  *   post:
- *      description: Create new User
- *      tags: ["users"]
+ *      description: Create new Company
+ *      tags: ["companies"]
  *      security:
  *       - cookieAuth: []
  *      requestBody:
- *        description: user creation request body
+ *        description: company creation request body
  *        required: true
  *        content:
  *          application/json:
  *            schema:
- *              $ref: '#/components/schemas/UserSchema'
+ *              $ref: '#/components/schemas/CompanySchema'
  *            example:
- *              name: userName
- *              email: test.user@mail.com
+ *              social_reason: text here
+ *              fantasy_name: text here
+ *              cnpj: 00.000.000/0000-00
  *      responses:
  *        201:
- *          description: return created user
+ *          description: return created company
  *          content:
  *            application/json:
  *              schema:
  *                oneOf:
- *                  - $ref: '#/components/schemas/UserSchema'
+ *                  - $ref: '#/components/schemas/CompanySchema'
  *        default:
  *          description: unexpected error
  *          content:
@@ -70,65 +71,65 @@ router.get('/', UserController.findAll);
  *              schema:
  *                $ref: '#/components/schemas/Error'
  */
-router.post('/', UserController.create);
+router.post('/', CompanyController.create);
 
 /**
  * GET method route
- * @example http://localhost:PORT/v1/users/:id
+ * @example http://localhost:PORT/v1/companies/:id
  *
  * @swagger
- * /v1/users/{id}:
+ * /v1/companies/{id}:
  *  get:
- *    description: Get user by userId
- *    tags: ["users"]
+ *    description: Get company by companyId
+ *    tags: ["companies"]
  *    security:
  *      - cookieAuth: []
  *    parameters:
  *      - in: path
  *        name: id
- *        description: the unique userId
+ *        description: the unique companyId
  *        required: true
  *        schema:
  *          type: string
  *    responses:
  *      200:
- *        description: return user by id
+ *        description: return company by id
  *        content:
  *          application/json:
  *            schema:
  *              oneOf:
- *                - $ref: '#/components/schemas/UserSchema'
+ *                - $ref: '#/components/schemas/CompanySchema'
  */
-router.get('/:id', UserController.findOne);
+router.get('/:id', CompanyController.findOne);
 
 /**
  * DELETE method route
- * @example  http://localhost:PORT/v1/users/:id
+ * @example  http://localhost:PORT/v1/companies/:id
  *
  * @swagger
- * /v1/users/{id}:
+ * /v1/companies/{id}:
  *  delete:
- *    description: Delete user by userId
- *    tags: ["users"]
+ *    description: Delete company by companyId
+ *    tags: ["companies"]
  *    security:
  *      - cookieAuth: []
  *    parameters:
  *      - in: path
  *        name: id
- *        description: the unique userId
+ *        description: the unique companyId
  *        required: true
  *        schema:
  *          type: string
  *    responses:
  *      200:
- *        description: return deleted user
+ *        description: return deleted company
  *        content:
  *          application/json:
  *            schema:
  *              oneOf:
- *                - $ref: '#/components/schemas/UserSchema'
+ *                - $ref: '#/components/schemas/CompanySchema'
  */
-router.delete('/:id', UserController.remove);
+router.delete('/:id', CompanyController.remove);
 
 /**
  * @export {express.Router}
