# src/routes/index.ts
@@ -4,6 +4,7 @@ import * as passportConfig from '../config/middleware/passport';
 import * as swaggerUi from 'swagger-ui-express';
 import AuthRouter from './AuthRouter';
 import UserRouter from './UserRouter';
+import CompanyRouter from './CompanyRouter';
 let swaggerDoc: Object;
 
 try {
@@ -35,6 +36,14 @@ export function init(app: express.Application): void {
      * @constructs
      */
     app.use('/v1/users', passportConfig.isAuthenticated, UserRouter);
+
+    /**
+     * @description
+     *  Forwards any requests to the /v1/companies URI to our UserRouter
+     *  Also, check if user authenticated
+     * @constructs
+     */
+    app.use('/v1/companies', passportConfig.isAuthenticated, CompanyRouter);
 
     /**
      * @description Forwards any requests to the /auth URI to our AuthRouter
